# g1_WebScrapper

./: .env  .env_example  Dockerfile  README.md  docker-compose.yaml  docker-compose2.yaml  entrypoint.sh  pyproject.toml  requirements.txt
app/: filehandler.py  main.py  webscraper.py  webscrapper.py
crawler/: conn.py  spider.py
csvs/: G1_2023-07-05.csv  G1_22-08-2022.csv
docker/: docker-compose.yaml  docker-compose2.yaml
public/: index.html  index.js  style.css
src/: config.py  database.py  main.py  models.py  routes.py  server.py
